force-app/main/default/objects/Business_Driver__c/Business_Driver__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT: An object to capture business drivers related to a release and a capability.</description>
    <label>Business Driver</label>
    <nameField>
        <label>Business Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>