force-app/main/default/objects/Business_Driver__c/fields/Business_Driver__c.field-meta.xml
<CustomField>
    <fullName>Business_Driver__c</fullName>
    <description>Business Drivers and their details</description>
    <label>Business Driver</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>