force-app/main/default/objects/Business_Driver__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <description>Capabilities which will help enable the Business Driver</description>
    <inlineHelpText>Select the Capability or Capabilities that will help enable the Business Driver.</inlineHelpText>
    <label>Capability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Campaign Management</fullName>
            </value>
            <value>
                <fullName>Contact Management</fullName>
            </value>
            <value>
                <fullName>Contract Management</fullName>
            </value>
            <value>
                <fullName>Lead Management</fullName>
            </value>
            <value>
                <fullName>Opportunity Management</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>