force-app/main/default/objects/Business_Driver__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related release to the business driver</description>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Business Driver</relationshipLabel>
    <relationshipName>Business_Driver</relationshipName>
    <type>Lookup</type>
</CustomField>