force-app/main/default/objects/Business_Driver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Driver__c</columns>
    <columns>Capability__c</columns>
    <columns>Release__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>